fixing text align

--- a/css/ieee-print.css
+++ b/css/ieee-print.css
@@ -43,6 +43,7 @@ code {
 	display: inline;
 	font-size: 0.8em;
 	font-family: Courier, monospace;
+	text-align: left;
 	white-space: pre-wrap;
 }
 
